--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ if(EMSCRIPTEN)
 	# Export the Emscripten-generated auxiliary methods which are needed by solc-js.
 	# Which methods of libsolc itself are exported is specified in libsolc/CMakeLists.txt.
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXTRA_EXPORTED_RUNTIME_METHODS=['cwrap','addFunction','removeFunction','UTF8ToString','lengthBytesUTF8','stringToUTF8','setValue']")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_FUNCTIONS='[\"_loadEdges\",\"_loadDB\",\"_signup\",\"_trust\",\"_transfer\",\"_edgesFromDB\",\"_flow\"]' -s RESERVED_FUNCTION_POINTERS=20")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s EXPORTED_FUNCTIONS='[\"_loadDB\",\"_signup\",\"_trust\",\"_transfer\",\"_edgeCount\",\"_flow\",\"_delayEdgeUpdates\",\"_performEdgeUpdates\"]' -s RESERVED_FUNCTION_POINTERS=20")
 
 	# Build for webassembly target.
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s WASM=1")
@@ -72,24 +72,24 @@ endif()
 
 set(
 	sources
-	main.cpp
-	types.h
-	exceptions.h
-	types.cpp
-	encoding.h
-	binaryImporter.h
-	binaryImporter.cpp
-	binaryExporter.h
 	binaryExporter.cpp
-	importGraph.h
-	importGraph.cpp
-	dbUpdates.h
-	dbUpdates.cpp
-	flow.h
+	binaryExporter.h
+	binaryImporter.cpp
+	binaryImporter.h
+	db.cpp
+	db.h
+	encoding.h
+	exceptions.h
 	flow.cpp
-	keccak.h
-	keccak.cpp
+	flow.h
+	importGraph.cpp
+	importGraph.h
 	json.hpp
+	keccak.cpp
+	keccak.h
+	main.cpp
+	types.cpp
+	types.h
 )
 
 add_executable(pathfinder ${sources})
