--- a/.github/workflows/edges.yml
+++ b/.github/workflows/edges.yml
@@ -3,7 +3,7 @@ name: Edges
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '7 */2 * * *'
+    - cron:  '7 */5 * * *'
 
 jobs:
   updateEdges:
@@ -17,8 +17,8 @@ jobs:
         run: ./download_safes.py
       - name: Convert to binary
         run: |
-          ./build/pathfinder --importDB safes.json edges.dat
-          cp edges.dat /tmp/
+          ./build/pathfinder --importDB safes.json db.dat
+          cp db.dat /tmp/
       - name: Push to gh-pages
         env:
           DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
@@ -35,8 +35,8 @@ jobs:
           git checkout -B gh-pages origin/master
           git clean -f -d
           git checkout origin/gh-pages -- emscripten_build/pathfinder.js
-          mv /tmp/edges.dat ./
-          git add edges.dat emscripten_build/pathfinder.js
+          mv /tmp/db.dat ./
+          git add db.dat emscripten_build/pathfinder.js
           git commit -m "Add edges and binary."
 
           git push -f origin gh-pages
