--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,12 +10,16 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Create Build Environment
-      run: cmake -E make_directory ${{runner.workspace}}/build
+      run: cmake -E make_directory ${{runner.workspace}}/pathfinder/build
     - name: Configure CMake
       shell: bash
-      working-directory: ${{runner.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=Release
+      working-directory: ${{runner.workspace}}/pathfinder/build
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release
     - name: Build
-      working-directory: ${{runner.workspace}}/build
+      working-directory: ${{runner.workspace}}/pathfinder/build
       shell: bash
       run: cmake --build . --config Release
+    - name: Test
+      working-directory: ${{runner.workspace}}/pathfinder/build
+      shell: bash
+      run: ./test/test.sh
