--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,3 +19,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: cmake --build . --config Release
+    - name: Test
+      working-directory: test
+      shell: bash
+      run: ./test.sh
